# TestCMake

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/shi/quan/testcmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/shi/quan/testcmake/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/shi/quan/testcmake/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
